try to fix circleci