@@ -358,9 +358,12 @@
                             </systemProperties>
                             <!-- This fork mode seems to be only working configuration for JDK7 -->
                             <!-- <forkMode>always</forkMode> -->
-                            <forkCount>1</forkCount>
+                            <!--<forkCount>1</forkCount>
                             <reuseForks>false</reuseForks>
-                            <argLine>-Xmx2048m</argLine>
+                            <argLine>-Xmx2048m</argLine> -->
+                            <forkCount>3</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
